       contributed by Shakeel Mahate.
* wgn - Search Windows Guide Network (from John Bairen).
* howfar - Find out how far it is from city to city (from John Bairen).
* dir - Get driving directions from one place to another (from Pete H).
* wik - Wikipedia search (from Thad Kerosky)
* nup - Nupedia (from Thad Kerosky)
* exp - Expedia (from Allen B. MacKenzie)

Modified Searches

* ups - Tim Dierks fixed to zero out old search values from the form and 
        edit out non-alphanumerics (since value was used in eval, single 
        quotes could cause JS errors)
* fv - Allen B. MacKenzie fixed a bug

Enhancements

* Names that resemble FTP servers (i.e., start with "ftp.") are opened 
  with the ftp: protocol.  (Feature request #598368)
* Brent Beardsley modified the add-on support to load all xml files
  for an add-on, not just one.


Bug Fixes



-- What's new for 3.0.0.24 (beta)

New Searches

* rfc - search the Internet RFC/STD/FYI/BCP Archives (from Joey Lesh)
* cp - search for CodeProject, a code sharing site (from Andreas Saurwein)
* vir - search http://www.virusbtn.com/ for virus information (from John Bairen)
* infosec - search http://www.infosecuritymag.com/ for security information (from John Bairen)
* pg - Project Gutenberg/Public Domain book (pg) search (from Thad Kerosky)
* slash - Search Slashdot (from Paul Bowers)
* short - Abbreviate long and convoluted URLs (from Reginald Braithwaite-Lee)
* palm - PalmGear.com search (from Herman Fuchs)
* fv - FlightView search (from Allen B. MacKenzie)

Modified Searches

* yp - Tim Dierks added support for addresses
* temp - Steven Ehrbar added Kelvin and Rankine conversions, /centigrade switch

Enhancements

* install now bundled with xplocalsearch.css, to be used as localsearch.css to make
  things match with XP default theme.
* changed default length of retained search history from 50 to 1000.
* Added Finnish translation (from Toni Viemero)

Bug Fixes
